appId: host.exp.exponent
name: I05 - Scroll Integrity
---
- launchApp
- tapOn: "SmartSpend"

- assertVisible: "Home"

- scroll
- tapOn: "AI Chatbot"
- assertVisible: "Finance Assistant"

# Add multiple messages to fill chat
- tapOn: "What should my monthly savings target be?"
- assertVisible: { text: "Finance Assistant", optional: true }
- assertVisible: { text: "Plan Highlights", optional: true }
- tapOn: "How should I invest my surplus this month?"
- assertVisible: { text: "Finance Assistant", optional: true }
- assertVisible: { text: "Finance Assistant", optional: true }
- assertVisible: { text: "Plan Highlights", optional: true }
- tapOn: "What are 3 smart ways I can cut spending?"
- assertVisible: { text: "Finance Assistant", optional: true }
- assertVisible: { text: "Finance Assistant", optional: true }
- assertVisible: { text: "Plan Highlights", optional: true }
# Send Hello
- tapOn:
    point: "44%,92%"
- inputText: "Hello"
- tapOn:
    point: "92%,92%"

# Acceptable replies
- assertVisible: { text: "Sorry", optional: true }
- assertVisible: { text: "unable", optional: true }
- assertVisible: { text: "Savings", optional: true }
- assertVisible: { text: "Finance Assistant", optional: true }

# Send Hello
- tapOn:
    point: "44%,92%"
- inputText: "hi"
- tapOn:
    point: "92%,92%"
# Acceptable replies
- assertVisible: { text: "Sorry", optional: true }
- assertVisible: { text: "unable", optional: true }
- assertVisible: { text: "Savings", optional: true }
- assertVisible: { text: "Finance Assistant", optional: true }

# Send Hello
- tapOn:
    point: "44%,92%"
- inputText: "Wassup"
- tapOn:
    point: "92%,92%"
# Acceptable replies
- assertVisible: { text: "Sorry", optional: true }
- assertVisible: { text: "unable", optional: true }
- assertVisible: { text: "Savings", optional: true }
- assertVisible: { text: "Finance Assistant", optional: true }

# Scroll down and back up
- scrollUntilVisible:
      element: "Hello"
      direction: DOWN
# Verify messages remain in place
- assertVisible: "What should my monthly savings target be?"
- assertVisible: { text: "Finance Assistant", optional: true }
- assertVisible: { text: "Create budget", optional: true }
- assertVisible: { text: "Goals", optional: true }
